--- a/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj.filters
+++ b/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="data.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="my_sql_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="write_txt_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
