--- a/ab_oil_pressure_test/ab_oil_pressure_test/ab_oil_pressure_test.vcxproj
+++ b/ab_oil_pressure_test/ab_oil_pressure_test/ab_oil_pressure_test.vcxproj
@@ -20,12 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ab_oil_pressure_test.cpp" />
+    <ClCompile Include="mysql_inserter.cpp" />
+    <ClCompile Include="mysql_selector.cpp" />
+    <ClCompile Include="mysql_session.cpp" />
+    <ClCompile Include="mysql_write.cpp" />
     <ClCompile Include="txt_const_iterator.cpp" />
-    <ClCompile Include="dls.cpp" />
     <ClCompile Include="element_ex.cpp" />
-    <ClCompile Include="parse.cpp" />
-    <ClCompile Include="txt_parser.cpp" />
-    <ClCompile Include="parse_xml.cpp" />
     <ClCompile Include="record.cpp" />
     <ClCompile Include="record00.cpp" />
     <ClCompile Include="record01.cpp" />
@@ -36,21 +36,22 @@
     <ClCompile Include="record_type_ex.cpp" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="test_type_ex.cpp" />
+    <ClCompile Include="txt_forward_list.cpp" />
     <ClCompile Include="txt_read.cpp" />
+    <ClCompile Include="txt_reader.cpp" />
     <ClCompile Include="txt_write.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ab_oil_pressure_test.h" />
     <ClInclude Include="const_iterator_base.h" />
-    <ClInclude Include="forward_list.h" />
-    <ClInclude Include="const_iterator.h" />
+    <ClInclude Include="forward_list_base.h" />
+    <ClInclude Include="mysql_inserter.h" />
+    <ClInclude Include="mysql_selector.h" />
+    <ClInclude Include="mysql_session.h" />
+    <ClInclude Include="mysql_write.h" />
     <ClInclude Include="txt_const_iterator.h" />
-    <ClInclude Include="dls.h" />
     <ClInclude Include="element.h" />
     <ClInclude Include="element_ex.h" />
-    <ClInclude Include="parse.h" />
-    <ClInclude Include="txt_parser.h" />
-    <ClInclude Include="parse_xml.h" />
     <ClInclude Include="record.h" />
     <ClInclude Include="record00.h" />
     <ClInclude Include="record01.h" />
@@ -63,7 +64,9 @@
     <ClInclude Include="key.h" />
     <ClInclude Include="test_type.h" />
     <ClInclude Include="test_type_ex.h" />
+    <ClInclude Include="txt_forward_list.h" />
     <ClInclude Include="txt_read.h" />
+    <ClInclude Include="txt_reader.h" />
     <ClInclude Include="txt_write.h" />
   </ItemGroup>
   <ItemGroup>
@@ -152,7 +155,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -170,7 +173,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -192,7 +195,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -206,6 +209,7 @@
       <PreprocessorDefinitions>NDEBUG;NHILL_DZG_ABOPT_EXPORT;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C++ 8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -213,8 +217,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../../../gemeinsam/bin/$(Platform)/$(Configuration);C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\vs14;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
