--- a/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj
+++ b/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj
@@ -110,7 +110,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>..\..\..\gemeinsam\bin\$(Platform)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\date_time.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
@@ -136,7 +136,7 @@ xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\ssleay32.dll" "$(Sol
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>..\..\..\gemeinsam\bin\$(Platform)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\date_time.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
@@ -168,7 +168,7 @@ xcopy "C:\Program Files (x86)\MySQL\Connector C++ 8.0\lib\debug\mysqlcppconn8-2-
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\..\..\gemeinsam\bin\$(Platform)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\date_time.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
@@ -197,11 +197,12 @@ xcopy "C:\Program Files (x86)\MySQL\Connector C++ 8.0\lib\ssleay32.dll" "$(Solut
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\..\..\gemeinsam\bin\$(Platform)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\date_time.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
 xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\enum.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
+xcopy "$(SolutionDir)..\gemeinsam\bin\$(Platform)\$(Configuration)\uwi.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
 
 xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\mysqlcppconn8-2-vs14.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
 xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\libeay32.dll" "$(SolutionDir)bin\$(Platform)\$(Configuration)\*" /y /d /s
@@ -211,6 +212,7 @@ xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\ssleay32.dll" "$(Sol
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="data.cpp" />
+    <ClCompile Include="mysql_select_test.cpp" />
     <ClCompile Include="my_sql_test.cpp" />
     <ClCompile Include="parse_txt_test.cpp" />
     <ClCompile Include="const_iterator_test.cpp" />
@@ -221,6 +223,7 @@ xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\ssleay32.dll" "$(Sol
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="txt_reader_test.cpp" />
     <ClCompile Include="write_txt_test.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -230,9 +233,6 @@ xcopy "C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\ssleay32.dll" "$(Sol
   <ItemGroup>
     <ProjectReference Include="..\ab_oil_pressure_test\ab_oil_pressure_test.vcxproj">
       <Project>{580f2e2b-0abd-4b92-b002-a35a80173c30}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ab_oil_pressure_test_mysql\ab_oil_pressure_test_mysql.vcxproj">
-      <Project>{fd31d097-a6d6-410f-a7e0-7f82ce96dae6}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
